completed swagger doc
